# accio-servicemeow

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  seed.json.example  setup.sh
.claude/: settings.json
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 52d73c6ccff1_drop_webhooks_table.py  a1b2c3d4e5f6_remove_paused_status.py  a3f7c2d1e456_add_sla_target_assign_minutes.py  eb813e61549f_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: dependencies.py  middleware.py
backend/app/api/routes/: api_keys.py  auth.py  dashboard.py  groups.py  sla.py  tickets.py  users.py
backend/app/mcp/: auth.py  resolvers.py  server.py
backend/app/mcp/tools/: info.py  tickets.py
backend/app/models/: __init__.py  api_key.py  attachment.py  audit_log.py  base.py  group.py  sla_config.py  ticket.py  ticket_note.py  user.py
backend/app/schemas/: api_key.py  attachment.py  audit_log.py  dashboard.py  group.py  sla_config.py  ticket.py  ticket_note.py  user.py
backend/app/services/: attachment_service.py  audit_service.py  auth_service.py  group_service.py  note_service.py  sla_config_service.py  sla_service.py  ticket_service.py  user_service.py
backend/app/tasks/: sla_checker.py
backend/tests/: conftest.py  test_auth.py  test_groups.py  test_mcp.py  test_tickets.py  test_users.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
nginx/: Dockerfile  entrypoint.sh  nginx.conf.template
(+55 files in other folders)
